--- a/Css/alphabet.css
+++ b/Css/alphabet.css
@@ -1,3 +1,9 @@
+body{
+    display: flex;
+    text-align: center;
+}
+
+
 .contenido-numeros img {
     width: 100%;
     max-width: 400px;
@@ -5,26 +11,22 @@
     margin: 1rem 0;
 }
 
-/* Estilos para la tarjeta */
 .tarjeta-pdf {
     width: 300px;
-    height: 200px;
+    height: 500px;
     margin: 20px;
     border: 1px solid #ccc;
     border-radius: 8px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     overflow: hidden;
     position: relative;
-    cursor: pointer;
+    color: #000;
 }
 
 .tarjeta-contenido {
     padding: 20px;
     background-color: #f9f9f9;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+    text-align: center;
 }
 
 .tarjeta-contenido h2 {
@@ -32,30 +34,45 @@
     font-size: 18px;
 }
 
-.tarjeta-contenido p {
-    font-size: 14px;
-    color: #555;
-}
-
-/* Estilos para el botón de descarga */
 .descargar-boton {
-    position: absolute;
-    bottom: 10px;
-    left: 50%;
-    transform: translateX(-50%);
+    margin-top: 20px; 
+    text-align: center;
 }
 
 .btn-descargar {
-    background-color: #007bff;
+    background-color: #c53030;
     color: white;
+    padding: 20px;
+    width: 100%;
+    max-width: 300px;
     border: none;
-    padding: 8px 16px;
-    font-size: 14px;
+    border-radius: 20px;
     cursor: pointer;
-    border-radius: 4px;
-    transition: background-color 0.3s ease;
 }
 
+
 .btn-descargar:hover {
-    background-color: #0056b3;
+    background-color: #cb5454;
+}
+
+.pdf-embed {
+    padding: 20px;
+    text-align: center;
+}
+
+.pdf-embed iframe {
+    border: none;
+    width: 100%;
+    height: 480px;
+}
+
+@media (max-width: 768px) {
+    .tarjeta-pdf {
+        width: 100%;
+        margin: 10px;
+    }
+
+    .pdf-embed iframe {
+        height: 300px;
+    }
 }
